--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-# Ignorer les fichiers exécutables
 *.exe
-
-# Ignorer les fichiers de configuration de VS Code
 .vscode/
-
-# Ignorer les fichiers de compilation
 *.o
 *.out
+.git/info/exclude
